# Game-in-rust

./: .gitignore  Animations.md  Cargo.toml  Collision.txt  README.md  build.rs  gltf.json  gtlf.txt  replace.md
ai/: Cargo.toml
assets/: player_01.dae  player_01.glb  test1.dae
blender_models/: Enemy1.blend  Enemy1.blend1  enemy1.glb  hammer.blend  hammer.blend1  hammer.glb  learn_blender.blend  learn_blender.blend1  player.blend  player.blend1  player.glb  player.gltf  player_01.abc  player_01.blend  player_01.blend1  player_01.dae  player_01.usdc  player_01.x3d  player_02.blend  player_02.blend1  (+33 more)
executable/: Cargo.toml  build.rs
executable/src/: controls.rs  cube.rs  debug.rs  floor.rs  line.rs  main.rs  resources.rs  test_physics.rs  triangle.rs
executable/src/action_system/: action_functions.rs  action_loader.rs  action_system.rs
executable/src/camera/: camera.rs
executable/src/entity/: action.rs  anchor_point.rs  entities.rs  entity.rs  mod.rs  model.rs
executable/src/game/: ai.rs  context.rs  mod.rs  physics_functions.rs  scene.rs  update.rs  world.rs
executable/src/game/ai/: ai.rs  behaviour.rs  behaviour_functions.rs  mod.rs
executable/src/level/: mod.rs
executable/src/noise_map/: noise.rs
executable/src/physics/: collision_3d.rs  impulse_resolution.rs  mod.rs  movement_collision.rs  physics.rs  projection_collision.rs
executable/src/render_gl/: animation_player.rs  buffer.rs  color_buffer.rs  context.rs  generated_mesh.rs  inverse_kinematics.rs  keyframe_animation.rs  mesh.rs  mod.rs  model.rs  render_functions.rs  shader.rs  skeleton.rs  skeleton_animation.rs  texture.rs
executable/src/text_render/: bitmap_generator.rs  free_type_wrapper.rs  mod.rs  types.rs
executable/src/types/: mod.rs
(+162 files in other folders)
