[package]
name = "executable"
version = "0.1.0"
authors = ["Nikolaj Østergaard <niko.fris@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "../lib/gl" }
quadtree = { path = "../lib/quadtree" }
shared = { path = "../shared" }
failure = "0.1"
render_gl_derive = { path = "../render_gl_derive" }
entity_component_derive = { path = "../entity_component_derive" }
vec-2-10-10-10  = "0.1.2"
half = "1.1.1"
nalgebra = "0.25.4"
nalgebra-glm = "0.11.0"
obj-rs = "0.6.2"
stringreader = "0.1.1"
fs_extra = "1.2.0"
roxmltree = "0.14.0"
notify = "4.0.15"
walkdir = "2.1"
tobj = "2.0.4"
image = "0.23.14"
freetype-rs = "0.28.0"
noise = "0.7.0"
perlin_noise = "1.0.1"
rand = "0.8.0"
libloading = "0.5"


[dependencies.gltf]
version = "0.15.2"
features = ["extras", "names"]


[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]


[features]
gl_debug = ["gl/debug"]


[build-dependencies]
walkdir = "2.1"
